force-app/main/default/objects/Incentive_Payouts__c/Incentive_Payouts__c.object-meta.xml
<CustomObject>
    <label>Incentive Payouts</label>
    <nameField>
        <displayFormat>INP-{00000}</displayFormat>
        <label>Incentive Payouts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Payouts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>