force-app/main/default/objects/Incentive_Payouts__c/fields/All_Payment_Of_Sale_Inn__c.field-meta.xml
<CustomField>
    <fullName>All_Payment_Of_Sale_Inn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Payment Of Sale Inn</label>
    <type>Checkbox</type>
</CustomField>