force-app/main/default/objects/Incentive_Payouts__c/fields/Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Incentive Payouts</relationshipLabel>
    <relationshipName>Incentive_Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>