force-app/main/default/objects/Incentive_Payouts__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dubai Bank</fullName>
            </value>
            <value>
                <fullName>Emirates Islamic Bank</fullName>
            </value>
            <value>
                <fullName>RAKBANK</fullName>
            </value>
            <value>
                <fullName>FAB (First Abu Dhabi Bank)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>