force-app/main/default/objects/Incentive_Payouts__c/fields/Differential_Incentive_Due__c.field-meta.xml
<CustomField>
    <fullName>Differential_Incentive_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Differential Incentive Due</label>
    <type>Checkbox</type>
</CustomField>