force-app/main/default/objects/Incentive_Payouts__c/fields/IncentiveSlab__c.field-meta.xml
<CustomField>
    <fullName>IncentiveSlab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Slab</label>
    <referenceTo>Incentive_Slab__c</referenceTo>
    <relationshipLabel>Incentive Payouts</relationshipLabel>
    <relationshipName>Incentive_Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>