force-app/main/default/objects/Incentive_Payouts__c/fields/Not_Eligible_for_Payout__c.field-meta.xml
<CustomField>
    <fullName>Not_Eligible_for_Payout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Eligible for Payout</label>
    <type>Checkbox</type>
</CustomField>