force-app/main/default/objects/Incentive_Payouts__c/fields/Payable_To__c.field-meta.xml
<CustomField>
    <fullName>Payable_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>