force-app/main/default/objects/Incentive_Payouts__c/recordTypes/Incentive_Due.recordType-meta.xml
<RecordType>
    <fullName>Incentive_Due</fullName>
    <active>true</active>
    <label>Incentive Due</label>
</RecordType>