force-app/main/default/objects/Incentive_Payouts__c/recordTypes/Incentive_Paid.recordType-meta.xml
<RecordType>
    <fullName>Incentive_Paid</fullName>
    <active>true</active>
    <label>Incentive Paid</label>
</RecordType>